gcc/testsuite/g++.dg/cpp0x/gen-attrs-60.C
// PR c++/60365
// { dg-do compile { target c++11 } }

void func [[noreturn, noreturn]] ();     // { dg-error "at most once" }
